--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -18,12 +18,14 @@
         <div class="container">
             {{ content }}
         </div>
-        <footer class="footer">
-            <div class="container">
-                <div class="col">
-                    <p><i class="bi bi-github"></i> <a href="https://github.com/pushkarkadam">pushkarkadam</a></p>
+        <div class="">
+            <footer class="footer">
+                <div class="container">
+                    <div class="col">
+                        <p><i class="bi bi-github"></i> <a href="https://github.com/pushkarkadam">pushkarkadam</a></p>
+                    </div>
                 </div>
-            </div>
-        </footer>
+            </footer>
+        </div>
     </body>
 </html>
