--- a/_includes/navigation.html
+++ b/_includes/navigation.html
@@ -7,7 +7,7 @@
         <ul class="navbar-nav mr-auto">
             {% for item in site.data.navigation %}
                 <li class="nav-item">
-                    <a class="nav-link" href="{{ item.link }}">
+                    <a class="nav-link" href="{{ site.baseurl }}{{ item.link }}">
                         {{ item.name }}
                     </a>
                 </li>
