--- a/_layouts/job.html
+++ b/_layouts/job.html
@@ -1,7 +1,9 @@
 ---
 layout: default
 ---
-
+<div class="mt-2">
+    <p><a href="{{ site.baseurl }}/experience.html"><i class="bi bi-arrow-left"></i> Back to Work Experience</a></p>
+</div>
 <div class="mt-2">
     <div class="row">
         <div class="col-sm-2 col-md-2 col-lg-2">
