--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -15,8 +15,9 @@
     </head>
     <body>
         {% include navigation.html %}
-        <div class="container">
+        <div class="container mb-5 pb-5">
             {{ content }}
         </div>
+        {% include footer.html %}
     </body>
 </html>
