Changed background color of header and footer.

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,4 +1,4 @@
-<footer class="footer bg-dark">
+<footer class="footer bg-light">
     <div class="container">
         <div class="row">
             {% for item in site.data.footer %}
