Target link to new tab added for certificate.

--- a/_layouts/certificate.html
+++ b/_layouts/certificate.html
@@ -16,7 +16,7 @@ layout: default
         <p><strong>Institute</strong>: {{ page.institute }}</p>
         <p><strong>University</strong>: {{ page.university }}</p>
         <p><strong>Valid certificate ID</strong>: {{ page.certificate_id }}</p>
-        <p><a href="{{ page.link }}">Certificate link</a></p>
+        <p><a href="{{ page.link }}" target="_blank">Certificate link</a></p>
         <p class="mt-1">{{ page.content }}</p>
     </div>
 </div>
