Reading progress bar added.

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -15,7 +15,7 @@
         {% seo %}
     </head>
     <body>
-        <div class="mb-2">
+        <div class="">
             {% include navigation.html %}
         </div>
         <div class="container mb-5 pb-5 pt-5">
