--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -1,7 +1,9 @@
 ---
 layout: default
 ---
-<div class="mt-2">
+<div class="" id="progress-bar">
+</div>
+<div class="mt-2 pt-5">
     <p><a href="{{ site.baseurl }}/blog.html"><i class="bi bi-arrow-left"></i> Back to Blog</a></p>
 </div>
 <div class="page-header">
@@ -18,3 +20,6 @@ layout: default
 <div class="mt-2">
     {{ content }}
 </div>
+
+<script src="{{ site.baseurl }}/assets/js/post.js">
+</script>
