--- a/_sass/main.scss
+++ b/_sass/main.scss
@@ -22,3 +22,14 @@ body {
 .home-header {
     font-family: 'Courier New', monospace;
 }
+
+#progress-bar {
+    --scrollAmount: 0%;
+    background-image: linear-gradient(120deg, #f093fb 0%, #f5576c 100%);
+    width: var(--scrollAmount);
+    height:10px;
+    position: fixed;
+    margin-top: 8px;
+    padding-top: 0px;
+    left:0;
+}
