Overlap of navbar removed. Fixes #1.

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -7,7 +7,7 @@
         <div class="">
             {% include navigation.html %}
         </div>
-        <div class="container mb-5 pb-5 pt-5">
+        <div class="container mt-2 mb-5 pb-5 pt-5">
             {{ content }}
         </div>
         <div class="">
