--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -3,7 +3,7 @@ layout: default
 ---
 <div class="" id="progress-bar">
 </div>
-<div class="mt-2 pt-5">
+<div class="pt-3">
     <p><a href="{{ site.baseurl }}/blog.html"><i class="bi bi-arrow-left"></i> Back to Blog</a></p>
 </div>
 <div class="page-header">
