Fixed the progress bar and navbar gap.

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -4,10 +4,10 @@
         {% include head.html %}
     </head>
     <body>
-        <div class="">
+        <div class="mb-auto">
             {% include navigation.html %}
         </div>
-        <div class="container mt-2 mb-5 pb-5 pt-5">
+        <div class="container mt-auto mb-5 pb-5 pt-5">
             {{ content }}
         </div>
         <div class="">
