Page title links not highlighting and font changed.

--- a/_sass/main.scss
+++ b/_sass/main.scss
@@ -33,3 +33,15 @@ body {
     padding-top: 0px;
     left:0;
 }
+
+.blog-meta {
+    font-family: 'Courier New', monospace;
+}
+
+.page-title a:link {
+    color: black;
+}
+
+.page-title a:hover {
+    color: blue;
+}
