--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -9,7 +9,7 @@ layout: default
 <div class="page-header">
     <h1>{{ page.title }}</h1>
     {% if page.date %}
-        <p>{{ page.date | date: "%-d %B %Y" }}</p>
+        <p class="blog-meta">{{ page.date | date: "%-d %B %Y" }}</p>
     {% endif %}
 </div>
 {% if page.cover_image %}
