--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -11,6 +11,7 @@ layout: default
     {% if page.date %}
         <p class="blog-meta">{{ page.date | date: "%-d %B %Y" }}</p>
     {% endif %}
+    <p class="blog-meta" id="read-time"></p>
 </div>
 {% if page.cover_image %}
     <div class="">
