--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -9,7 +9,13 @@ layout: default
 <div class="page-header">
     <h1>{{ page.title }}</h1>
     {% if page.date %}
-        <p class="blog-meta">{{ page.date | date: "%-d %B %Y" }}</p>
+        <p class="blog-meta">
+            {{ page.date | date: "%-d %B %Y" }}
+            --
+            {% for category in page.categories %}
+                {{ category }}
+            {% endfor %}
+        </p>
     {% endif %}
     <p class="blog-meta" id="read-time"></p>
 </div>
