--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -13,7 +13,7 @@ layout: default
             {{ page.date | date: "%-d %B %Y" }}
             --
             {% for category in page.categories %}
-                {{ category }}
+                <a href="#" class="badge badge-light blog-meta">{{ category }}</a>
             {% endfor %}
         </p>
     {% endif %}
