Category links added to blog post page.

--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -8,17 +8,24 @@ layout: default
 </div>
 <div class="page-header">
     <h1>{{ page.title }}</h1>
-    {% if page.date %}
-        <p class="blog-meta">
-            {{ page.date | date: "%-d %B %Y" }}
-            | <i class="bi bi-clock"></i>
-            <span id="read-time"></span>
-            | <i class="bi bi-tag"></i>
-            {% for category in page.categories %}
-                <a href="#" class="badge badge-light blog-meta">{{ category }}</a>
+    <p class="blog-meta">
+        {% if page.date %}
+            {{ page.date | date: "%-d %B %Y" }} |
+        {% endif %}
+        <i class="bi bi-clock"></i>
+        <span id="read-time"></span> |
+        <i class="bi bi-tag"></i>
+        {% assign categories = site.categories | sort %}
+        {% for cat in page.categories %}
+            {% for category in categories %}
+                {% if category.category_name == cat %}
+                    <a href="{{ site.baseurl }}{{ category.url }}" class="badge badge-light blog-meta">{{ category.category_name }}</a>
+                    {% break %}
+                {% endif %}
             {% endfor %}
-        </p>
-    {% endif %}
+            <a href="{{ site.baseurl }}{{ category.url }}" class="badge badge-light blog-meta">{{ category.category_name }}</a>
+        {% endfor %}
+    </p>
     <p class="blog-meta" id="read-time"></p>
 </div>
 {% if page.cover_image %}
