--- a/_layouts/category.html
+++ b/_layouts/category.html
@@ -5,3 +5,29 @@ layout: default
 <div class="mt-2">
     <h1>Category: {{ page.category_name }}</h1>
 </div>
+<hr>
+
+<div class="mt-2">
+    {% assign posts = site.posts | sort: 'date' | reverse %}
+    <ul class="list-unstyled">
+        {% for post in posts %}
+            {% if post.categories contains page.category_name %}
+                <li>
+                    <div class="">
+                        <h2 class="page-title"><a href="{{ site.baseurl }}{{ post.url }}">{{ post.title }}</a></h2>
+                        <p class="blog-meta">
+                            {{ post.date | date: "%-d %B %Y" }} |
+                            <i class="bi bi-tag"></i>
+                            {% for category in post.categories %}
+                                <span class="badge badge-secondary">{{ category }}</span>
+                            {% endfor %}
+                        </p>
+                        <p>{{ post.excerpt | markdownify }}</p>
+                        <p><a href="{{ site.baseurl }}{{ post.url }}">Read More</a></p>
+                    </div>
+                    <hr>
+                </li>
+            {% endif %}
+        {% endfor %}
+    </ul>
+</div>
