--- a/_layouts/category.html
+++ b/_layouts/category.html
@@ -18,8 +18,13 @@ layout: default
                         <p class="blog-meta">
                             {{ post.date | date: "%-d %B %Y" }} |
                             <i class="bi bi-tag"></i>
-                            {% for category in post.categories %}
-                                <span class="badge badge-success">{{ category }}</span>
+                            {% assign categories = site.categories | sort %}
+                            {% for cat in post.categories %}
+                                {% for category in categories %}
+                                    {% if category.category_name == cat %}
+                                        <a href="{{ site.baseurl }}{{ category.url }}" class="badge badge-success">{{ category.category_name }}</a>
+                                    {% endif %}
+                                {% endfor %}
                             {% endfor %}
                         </p>
                         <p>{{ post.excerpt | markdownify }}</p>
