--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -8,24 +8,32 @@ layout: default
 </div>
 <div class="page-header">
     <h1>{{ page.title }}</h1>
-    <p class="blog-meta">
-        {% if page.date %}
-            {{ page.date | date: "%-d %B %Y" }} |
-        {% endif %}
-        <i class="bi bi-clock"></i>
-        <span id="read-time"></span> |
-        <i class="bi bi-tag"></i>
-        {% assign categories = site.categories | sort %}
-        {% for cat in page.categories %}
-            {% for category in categories %}
-                {% if category.category_name == cat %}
-                    <a href="{{ site.baseurl }}{{ category.url }}" class="badge badge-success blog-meta">{{ category.category_name }}</a>
-                    {% break %}
-                {% endif %}
+    <div class="blog-meta">
+        <div class="">
+            <i class="bi bi-calendar"></i>
+            {% if page.date %}
+                {{ page.date | date: "%-d %B %Y" }}
+            {% endif %}
+        </div>
+        <div class="">
+            <i class="bi bi-clock"></i>
+            <span id="read-time"></span>
+        </div>
+        <div class="">
+            <i class="bi bi-tag"></i>
+            {% assign categories = site.categories | sort %}
+            {% for cat in page.categories %}
+                {% for category in categories %}
+                    {% if category.category_name == cat %}
+                        <a href="{{ site.baseurl }}{{ category.url }}" class="badge badge-success blog-meta">{{ category.category_name }}</a>
+                        {% break %}
+                    {% endif %}
+                {% endfor %}
             {% endfor %}
-        {% endfor %}
-    </p>
-    <p class="blog-meta" id="read-time"></p>
+        </div>
+    </div>
+    <hr>
+    <!-- <p class="blog-meta" id="read-time"></p> -->
 </div>
 {% if page.cover_image %}
     <div class="">
