CSS blockquote specific to blog post added.

--- a/_sass/main.scss
+++ b/_sass/main.scss
@@ -46,14 +46,14 @@ body {
     color: blue;
 }
 
-blockquote {
+.blog-blockquote {
     background: #f9f9f9;
     border-left: 10px solid #ccc;
     margin: 1.5em 10px;
     padding: 0.5em 10px;
     quotes: "\201C""\201D""\2018""\2019";
 }
-blockquote:before {
+.blog-blockquote:before {
     color: #ccc;
     content: open-quote;
     font-size: 4em;
@@ -61,6 +61,6 @@ blockquote:before {
     margin-right: 0.25em;
     vertical-align: -0.4em;
 }
-blockquote p {
+.blog-blockquote p {
     display: inline;
 }
